[workspace]
members = [
    "lib",
    "atedb",
    "comms",
    "crypto",
    "files",
    "wasmer-bus/lib",
    "wasmer-bus/types",
    "wasmer-bus/macros",
    "wasmer-bus/fuse",
    "wasmer-bus/reqwest",
    "wasmer-bus/ws",
    "wasmer-bus/process",
    "wasmer-bus/time",
    "wasmer-bus/tty",
    "wasmer-bus/deploy",
    "wasmer-bus/hello",
    "wasmer-bus/webgl",
    "wasmer-bus/mio",
    "wasmer-auth",
    "wasmer-dfs",
    "wasmer-ssh",
    "wasmer-os",
    "wasmer-os-grammar",
    "wasmer-deploy-cli",
    "wasmer-term",
    "wasmer-web",
    "wasmer-gw",
    "wasmer-dnet",
    "wasmer-instance",
    "examples/crypto-bus",
    "examples/tcp-listener",
    "examples/tcp-client",
    "examples/multi-threading",
    "examples/condvar",
    "examples/thread-local",
    "examples/wasm64-example",
    "examples/ws-client",
    "examples/sub-process",
    "examples/fuse",
    "examples/stack",
]

[patch.crates-io]
tokio = { git = "https://github.com/john-sharratt/tokio.git", branch = "wasix" }

wasmer = { path = "../../wasmer/lib/api" }
wasmer-wasi = { path = "../../wasmer/lib/wasi" }
wasmer-vfs = { path = "../../wasmer/lib/vfs" }
wasmer-compiler-cranelift = { path = "../../wasmer/lib/compiler-cranelift" }
wasmer-compiler-llvm = { path = "../../wasmer/lib/compiler-llvm" }
wasmer-compiler-singlepass = { path = "../../wasmer/lib/compiler-singlepass" }
wasmer-compiler = { path = "../../wasmer/lib/compiler" }
wasmer-emscripten = { path = "../../wasmer/lib/emscripten" }
wasmer-wasi-local-networking = { path = "../../wasmer/lib/wasi-local-networking" }

#tokio = { path = "/prog/tokio/tokio" }

