[workspace]
members = [
    "lib",
    "atedb",
    "comms",
    "crypto",
    "files",
    "wasmer-bus/lib",
    "wasmer-bus/types",
    "wasmer-bus/macros",
    "wasmer-bus/fuse",
    "wasmer-bus/reqwest",
    "wasmer-bus/ws",
    "wasmer-bus/process",
    "wasmer-bus/time",
    "wasmer-bus/tty",
    "wasmer-bus/deploy",
    "wasmer-bus/hello",
    "wasmer-bus/webgl",
    "wasmer-bus/mio",
    "wasmer-auth",
    "wasmer-dfs",
    "wasmer-ssh",
    "wasmer-deploy-cli",
    "wasmer-web",
    "wasmer-gw",
    "wasmer-dnet",
    "wasmer-instance",
    "examples/crypto-bus",
    "examples/tcp-listener",
    "examples/tcp-client",
    "examples/multi-threading",
    "examples/condvar",
    "examples/thread-local",
    "examples/wasm64-example",
    "examples/ws-client",
    "examples/sub-process",
    "examples/fuse",
    "examples/stack",
]

[patch.crates-io]
wasmer-vfs = { path = "/prog/wasmer/lib/vfs" }
#tokio = { path = "/prog/tokio/tokio" }

