[workspace]
members = [
    "lib",
    "atedb",
    "comms",
    "crypto",
    "files",
    "wasmer-auth",
    "wasmer-dfs",
    "wasmer-deploy-cli",
    "wasmer-instance",
    "examples/crypto-bus",
    "examples/tcp-listener",
    "examples/tcp-client",
    "examples/multi-threading",
    "examples/condvar",
    "examples/thread-local",
    "examples/wasm64-example",
    "examples/ws-client",
    "examples/sub-process",
    "examples/fuse",
    "examples/stack",
    "examples/sleep",
]

[patch.crates-io]
wasmer-vfs = { path = "/prog/wasmer/lib/vfs" }
#tokio = { path = "/prog/tokio/tokio" }

