[package]
name = "atedb"
version = "1.6.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Distributed datachain (database) built on an immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "database", "server", "async" ]
categories = ["database", "cryptography", "database-implementations", "asynchronous"]
repository = "https://github.com/john-sharratt/ate/atedb"
readme = "README.md"

[features]
default = [ "client", "server" ]
client_web = [ "ate/client_web", "ate-auth/client_web" ]
client = [ "ate/client", "ate-auth/client", "libc" ]
server = [ "ate/server", "ate-auth/server", "ate/enable_mt", "libc" ]

[dependencies]
ate = { version = "^1", path = "../lib", default_features = false }
ate-auth = { version = "^1", path = "../auth", default_features = false }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = ["full", "signal", "process"] }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1"
ctrlc-async = { version = "^3" }
libc = { version = "^0.2", optional = true }
enum_dispatch = { version = "^0.3" }
clap = "^3.0.0-beta.5"
ascii_tree = "0.1.1"
shellexpand = "^2"
cached = "^0.23"
seqlock = "^0.1"
array-init = "^1"
rpassword-wasi = "^5"
url = "^2"
pbr = "^1"
regex = "^1"
colored = "^2"