[package]
name = "atefs"
version = "1.1.1"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Distributed filesystem built on an immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "filesystem" ]
categories = ["filesystem"]
repository = "https://github.com/john-sharratt/ate/atefs"
readme = "README.md"

[dependencies]
log = "0.4.*"
env_logger = "0.8.*"
parking_lot = "0.11.*"
futures = "0.3.*"
futures-util = "0.3.*"
async-trait = "0.1.*"
bytes = "1.0.*"
fxhash = "0.2.*"
fastrand = "1.4.*"
tokio = { version = "1.3.*", features = ["full", "signal", "process"] }
serde = { version = "1.0.*", features = ["derive"] }
ate = { version = "0.2.*", path = "../lib" }
ctrlc = { version = "3.1.*" }
directories = { version = "3.0.*" }
libc = { version = "0.2.*" }
fuse3 = { version = "0.2.0-beta.4", features = ["tokio-runtime", "unprivileged"] }
enum_dispatch = { version = "0.3.*" }
clap = "3.0.0-beta.2"
shellexpand = "2.1.0"
cached = "0.23.*"
seqlock = "0.1.*"
xarc = "0.2.*"
lockfree = "0.5.*"
array-init = "1.0.*"