[package]
name = "atenet"
version = "1.0.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "High performance virtual networking stack built on top of ate"
license = "MIT OR Apache-2.0"
keywords = [
    "networking",
    "wasm",
    "http-server",
]
categories = ["network-programming", "web-programming::http-server"]
repository = "https://github.com/john-sharratt/ate/tree/master/atefs"
readme = "README.md"

[features]
default = []

[dependencies]
ate = { version = "^1.2", path = "../lib", features = [ "client", "server" ], default_features = false }
ate-auth = { version = "^1.9", path = "../auth", features = [ "client", "server" ], default_features = false }
ate-files = { version = "^1.2", path = "../files" }
ateweb = { version = "^1.2", path = "../ateweb" }
wasm-bus-mio = { version = "^1", path = "../wasm-bus-mio",  default_features = false }
tokera = { version = "^1.3", path = "../tokera" }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = [ "full", "signal", "process"] }
serde = { version = "^1", features = [ "derive"] }
serde_yaml = { version = "^0.8" }
serde_json = { version = "^1" }
bincode = "^1"
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1.4"
enum_dispatch = { version = "^0.3" }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
shellexpand = "^2"
cached = "^0.23"
seqlock = "^0.1"
rpassword-wasi = "^5"
url = "^2"
ttl_cache = "^0.5"
x509-parser = "^0.12"
chrono = "^0.4"
smoltcp = { version = "0.8.0", features = [ "async" ] }
ctrlc = { version = "^3" }
http = { version = "^0.2" }
derivative = { version = "^2" }
managed = "0.8.0"
pnet = "^0.27"
byteorder = "^1"
async-recursion = "^1"