[package]
name = "ateweb"
version = "1.0.3"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "High performance web server built on top of atefs"
license = "MIT OR Apache-2.0"
keywords = [
    "static-web-server",
    "file-server",
    "http-server",
]
categories = ["network-programming", "web-programming::http-server"]
repository = "https://github.com/john-sharratt/ate/tree/master/atefs"
readme = "README.md"

[features]
default = []

[dependencies]
ate = { version = "^1", path = "../lib", features = [ "client", "server" ], default_features = false }
ate-auth = { version = "^1", path = "../auth", features = [ "client", "server" ], default_features = false }
ate-files = { version = "^1", path = "../files" }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
rustls = { version = "^0.19" }
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"] }
tokio-rustls = { version = "^0.22" }
http = { version = "0.2" }
mime_guess = { version = "2.0"}
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = [ "full", "signal", "process"] }
tungstenite = { version = "^0.15" } 
hyper-tungstenite = { version = "^0.4" }
serde = { version = "^1", features = [ "derive"] }
serde_yaml = { version = "^0.8" }
serde_json = { version = "^1" }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1.4"
ctrlc-async = { version = "^3" }
enum_dispatch = { version = "^0.3" }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
shellexpand = "^2"
cached = "^0.23"
seqlock = "^0.1"
array-init = "^1"
rpassword-wasi = "^5"
url = "^2"
pbr = "^1"
ttl_cache = "^0.5"
x509-parser = "^0.12"
chrono = { version = "^0.4" }
tls-parser = { version = "^0.10" }
pem = { version = "^0.8" }
rcgen = { version = "^0.8" }
base64 = { version = "^0.13" }
jsonxf = { version = "^1" }
ring = { version = "^0.16", features = ["std"] }
libc = "^0.2"
