[package]
name = "ate-auth"
version = "1.7.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Represents a standardized data model and API for authenticating an ATE chain-of-trust"
license = "MIT OR Apache-2.0"
keywords = [ "authentication", "cli", "authorization", "crypto" ]
categories = [ "data-structures", "command-line-utilities", "authentication", "cryptography" ]
repository = "https://github.com/john-sharratt/ate/auth"
readme = "README.md"

[features]
default = [ "client", "server" ]
client_web = [ "ate/client_web" ]
client = [ "ate/client" ]
server = [ "ate/server", "ate/enable_mt" ]

[dependencies]
ate = { version = "^0.9", path = "../lib", default_features = false }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = ["full", "signal", "process"] }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
parking_lot = "^0.11"
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1"
chrono = { version = "^0.4", features = ["serde"] }
isocountry = "^0.3"
url = "^2"
rpassword = "0.0.*"
regex = "^1"
hex = "^0.4"
google-authenticator = "^0.2"
qrcode = "^0.12"
base64 = "^0.13"
shellexpand = "^2"
clap = "3.0.0-beta.2"
ctrlc = "^3"
bincode = "^1"