[package]
name = "ate-auth"
version = "1.7.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Represents a standardized data model and API for authenticating an ATE chain-of-trust"
license = "MIT-Clause OR Apache-2.0-Clause"
keywords = [ "authentication", "cli", "authorization", "crypto" ]
categories = [ "data-structures", "command-line-utilities", "authentication", "cryptography" ]
repository = "https://github.com/john-sharratt/ate/auth"
readme = "README.md"

[[bin]]
name = "auth-server"
required-features = ["server"]

[features]
default = [ "client", "server" ]
client_web = [ "ate/client_web" ]
client = [ "ate/client" ]
server = [ "ctrlc", "ate/server", "ate/enable_mt" ]

[dependencies]
ate = { version = "^1", path = "../lib", default_features = false }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
parking_lot = "^0.11"
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1"
chrono = { version = "^0.4", features = ["serde"] }
isocountry = "^0.3"
url = "^2"
rpassword-wasi = "^5"
regex = "^1"
hex = "^0.4"
google-authenticator = "^0.2"
qrcode = "^0.12"
base64 = "^0.13"
shellexpand = "^2"
clap = "3.0.0-beta.2"
ctrlc = { version = "^3", optional = true }
bincode = "^1"
once_cell = "^1"
atty = "^0.2"
strum = "^0.21"
strum_macros = "^0.21"
rust_decimal = "^1"
rust_decimal_macros = "^1"
num-traits = { version = "^0.2" }