[package]
name = "ate-auth"
version = "1.7.3"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Represents a standardized data model and API for authenticating an ATE chain-of-trust"
license = "MIT OR Apache-2.0"
keywords = [ "authentication", "cli", "authorization", "crypto" ]
categories = [ "data-structures", "command-line-utilities", "authentication", "cryptography" ]
repository = "https://github.com/john-sharratt/ate/auth"
readme = "README.md"

[[bin]]
name = "auth-server"
required-features = ["server"]

[features]
default = [ "client", "server" ]
enable_full = [ "tty", "tokio/rt", "tokio/io-util", "tokio/time", "tokio/fs" ]
client_web = [ "ate/client_web", "tty" ]
client = [ "ate/client", "enable_full" ]
server = [ "ate/server", "ate/enable_mt", "enable_full" ]
tty = [ "atty" ]
force_tty = [ "tty" ]

[dependencies]
ate = { version = "^1", path = "../lib", default_features = false }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1"
chrono = { version = "^0.4", git = "https://github.com/john-sharratt/chrono.git", features = ["serde"] }
isocountry = "^0.3"
url = "^2"
rpassword-wasi = "^5"
regex = "^1"
google-authenticator = "^0.2"
qrcode = "^0.12"
base64 = "^0.13"
shellexpand = "^2"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
ctrlc-async = "^3"
bincode = "^1"
once_cell = "^1"
atty = { version = "^0.2", optional = true }
