[package]
name = "ate-crypto"
version = "1.1.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "Provides all the cryptographic functions"
license = "MIT OR Apache-2.0"
keywords = [ "cryptography" ]
categories = [ "cryptography" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

[features]
default = [ "quantum" ]
quantum = [ "pqcrypto-falcon-wasi", "pqcrypto-ntru-wasi", "pqcrypto-traits-wasi" ]

[dependencies]
wasmer-bus-types = { version = "^1", path = "../wasmer-bus/types" }
error-chain = { version = "^0.12", default_features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rmp = "^0.8"
rmp-serde = "^0.15"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-subscriber = { version = "^0.2" }
pqcrypto-falcon-wasi = { version = "^0.2", features = [ "avx2" ], default_features = false, optional = true }
pqcrypto-ntru-wasi = { version = "^0.5", features = [ "avx2" ], default_features = false, optional = true }
pqcrypto-traits-wasi = { version = "^0.3", default_features = false, optional = true }
sha3 = "^0.9"
blake3 = "0.3.8"
aes = { version = "^0.7" }
ctr = { version = "^0.8" }
fastrand = "^1"
rand = "^0.8"
rand_chacha = "^0.3"
fxhash = "^0.2"
hex = "^0.4"
base64 = "^0.13"
bincode = "^1"
once_cell = "^1"
num_enum = "^0.5"
tokio = { version = "1.20.1", features = [ "macros", "sync" ], default_features = false }

[target.'cfg(target_os = "wasi")'.dependencies]
backtrace = "^0.3"
