[package]
name = "ate-files"
version = "1.0.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Model and helper functions for access files stored in ATEs"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "filesystem", "fs" ]
categories = ["filesystem", "database", "development-tools"]
repository = "https://github.com/john-sharratt/ate/tree/master/atefs"
readme = "README.md"

[features]
default = [ "sys" ]
web = [ "ate/client_web" ]
sys = [ "ate/client" ]

[dependencies]
ate = { version = "^1", path = "../lib", default_features = false }
ate-auth = { version = "^1", path = "../auth", default_features = false }
error-chain = { version = "^0.12", default_features = false }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1.4"
ctrlc-async = { version = "^3" }
enum_dispatch = { version = "^0.3" }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
shellexpand = "^2"
cached = "^0.23"
seqlock = "^0.1"
array-init = "^1"
rpassword-wasi = "^5"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "^1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }

[build-dependencies]
pkg-config = "^0.3"
