[package]
name = "tok-grammar"
version = "0.1.2"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
publish = true
description = "Terminal Shell Grammar"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[dependencies]
lalrpop-util = "^0.19"
regex = { version = "^1.5" }

[build-dependencies]
lalrpop = { version = "^0.19", features = ["lexer"] }
