[package]
name = "ate"
version = "0.9.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Distributed immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "database", "crypto", "nosql", "async"]
categories = ["asynchronous", "caching", "cryptography", "database-implementations"]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ "client", "server", "enable_mt" ]
enable_verbose = []
enable_super_verbose = [ "enable_verbose" ]
enable_openssl = []
enable_buffered = []
enable_local_fs = []
enable_rotate = []
enable_caching = []
enable_ws = []
enable_client = []
enable_server = []
enable_net = [ "tokio/net" ]
enable_ntp = [ "enable_net" ]
enable_mt = [ "tokio/rt-multi-thread" ]
enable_tcp = [ "tokio-tungstenite", "pnet", "enable_net" ]
enable_web = [ "ws_stream_wasm", "wasm-bindgen", "wasm-bindgen-test", "async_io_stream", "tokio-util" ]
enable_basics = [ "enable_ws" ]
enable_dns = [ "enable_net", "trust-dns-proto", "trust-dns-client" ]
enable_full = [ "enable_buffered", "enable_local_fs", "enable_rotate", "enable_caching", "enable_ntp", "enable_tcp", "enable_dns", "error-chain/backtrace" ]
client_web = [ "enable_web", "enable_ws", "enable_client" ]
client = [ "enable_full", "enable_ws", "enable_client" ]
server = [ "enable_full", "enable_ws", "enable_server", "enable_client" ]

[dependencies]
error-chain = { version = "^0.12", default_features = false }
uuid = { version = "^0.8", features = ["serde", "v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rmp = "^0.8"
rmp-serde = "^0.15"
derive-new = "^0.5"
bytes = "^1"
futures = "^0.3"
futures-util = "^0.3"
hash = "^0.3"
fxhash = "^0.2"
async-trait = "^0.1"
fastrand = "^1"
rand = "^0.8"
rand_chacha = "^0.3"
snap = "^1"
once_cell = "^1"
sha3 = "^0.9"
multimap = "^0.8"
hex = "^0.4"
chrono = "^0.4"
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
cached = "^0.23"
parking_lot = "^0.11"
bincode = "^1"
async-executor = "^1"
url = { version = "^2", features = ["serde"] }
btreemultimap = { version = "^0.1" }
base64 = "^0.13"
num_enum = "^0.5"
pin-project-lite = "^0.2"
crossbeam = "^0.8"
cooked-waker = "^5"
pqcrypto-falcon = { git = "https://github.com/john-sharratt/pqcrypto-wasi.git" }
pqcrypto-ntru = { git = "https://github.com/john-sharratt/pqcrypto-wasi.git" }
pqcrypto-traits = { git = "https://github.com/john-sharratt/pqcrypto-wasi.git" }
http = { version = "^0.2" }
aes = { version = "^0.7" }
ctr = { version = "^0.8" }
send_wrapper = { version = "0.5", features = ["futures"] }
tokio = { version = "^1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }
ws_stream_wasm = { version = "^0.7", features= [ "tokio_io" ], optional = true }
wasm-bindgen = { version = "^0.2", optional = true }
wasm-bindgen-test = { version = "^0.3", optional = true }
async_io_stream = { version = "^0.3", optional = true }
tokio-util = { version = "^0.6", features = [ "io", "codec" ], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pnet = { version = "^0.27", optional = true }
trust-dns-proto = { version = "^0.20", optional = true }
trust-dns-client = { version = "^0.20", features = ["dnssec"], optional = true }
tokio-tungstenite = { version = "^0.14", optional = true }
backtrace = { version = "^0.3" }

[dev-dependencies]
ctor = "0.1.*"
rust_decimal = "1.10.*"
names = "0.11.*"
