[package]
name = "ate"
version = "1.0.4"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Distributed immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "database", "crypto", "nosql", "async"]
categories = ["asynchronous", "caching", "cryptography", "database-implementations"]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ "client", "server", "enable_mt" ]
enable_verbose = []
enable_super_verbose = [ "enable_verbose" ]
enable_openssl = []
enable_buffered = [ "async-executor" ]
enable_local_fs = []
enable_rotate = []
enable_caching = []
enable_client = []
enable_server = [ "hyper-tungstenite" ]
enable_dio_backtrace = []
enable_ntp = []
enable_web_sys = []
enable_mt = [ "tokio/rt-multi-thread" ]
enable_dns = [ "trust-dns-proto", "trust-dns-client", "pnet" ]
enable_full = [ "tokio/net", "tokio-tungstenite", "enable_buffered", "enable_local_fs", "enable_rotate", "enable_caching", "enable_ntp", "enable_dns", "tokio/rt", "tokio/io-util", "tokio/time", "tokio/fs" ]
client_web = [ "enable_client", "enable_web_sys" ]
client = [ "enable_full", "enable_client" ]
server = [ "enable_full", "enable_server", "enable_client" ]

[dependencies]
error-chain = { version = "^0.12", default_features = false }
uuid = { version = "^0.8", features = ["serde", "v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rmp = "^0.8"
rmp-serde = "^0.15"
bytes = "^1"
futures = "^0.3"
futures-util = "^0.3"
hash = "^0.3"
fxhash = "^0.2"
async-trait = "^0.1"
fastrand = "^1"
rand = "^0.8"
rand_chacha = "^0.3"
snap = "^1"
once_cell = "^1"
rcu_cell = "^0.1"
sha3 = "^0.9"
blake3 = "0.3.8"
multimap = "^0.8"
hex = "^0.4"
chrono = "^0.4"
pbr = "^1"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
cached = "^0.23"
bincode = "^1"
async-executor = { version = "^1", optional = true }
url = { version = "^2", features = ["serde"] }
btreemultimap = { version = "^0.1" }
base64 = "^0.13"
num_enum = "^0.5"
pin-project-lite = "^0.2"
cooked-waker = "^5"
pqcrypto-falcon-wasi = { version = "^0.2", features = [ "avx2" ], default_features = false }
pqcrypto-ntru-wasi = { version = "^0.5", features = [ "avx2" ], default_features = false }
pqcrypto-traits-wasi = { version = "^0.3", default_features = false }
http = { version = "^0.2" }
aes = { version = "^0.7" }
ctr = { version = "^0.8" }
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pnet = { version = "^0.27", optional = true }
tokio-tungstenite = { version = "^0.16", optional = true }
hyper-tungstenite = { version = "^0.4", optional = true }
trust-dns-proto = { version = "^0.20", optional = true }
trust-dns-client = { version = "^0.20", features = ["dnssec"], optional = true }
backtrace = { version = "^0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bus = { version = "0.4", path = "../wasm-bus" }
wasm-bus-ws = { version = "0.1", path = "../wasm-bus-ws" }
wasm-bus-time = { version = "0.1", path = "../wasm-bus-time" }

[dev-dependencies]
ctor = "0.1.*"
rust_decimal = "1.10.*"
names = "0.11.*"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
